# baram

./: .commitlintrc.json  .editorconfig  .gitattributes  .gitignore  .gitleaks.toml  .prettierignore  .prettierrc  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  THIRD-PARTY-NOTICES.md  eslint.config.js  index.html  knip.json  lint-staged.config.mjs  package-lock.json  package.json  sandbox.html  style-dictionary.config.ts  stylelint.config.mjs  tsconfig.json  tsconfig.node.json  tsconfig.plugin-api.json  tsconfig.test.json  vite.config.ts  vitest.config.ts
.claude/commands/: implement.md  milestone.md  new-component.md  new-extension.md  new-ipc.md  perf-bench.md  roundtrip-test.md  spec-check.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  (+1 more)
.husky/: pre-push
dev/: README.md  backlog.md  claude-automation-guide.md  next-steps.md  progress.json
docs/: backlog.md  claude-automation-guide.md  faq.md  keyboard-shortcuts.md  next-steps.md  plugin-development.md  progress.json  user-guide.md
examples/: Bellman-Ford.md  Dijkstra's Algorithm.md  Graph Theory.md  Priority Queue.md  README.md
registry/: index.json
scripts/: audit-css-vars.ts  check-version-sync.mjs  export-tokens-studio.ts  gen-recent-vault-icon.py  update-imports.py  update-registry-index.mjs
site/: build-docs.mjs  build-docs.test.mjs  i18n.js  index.html  main.js  site.test.mjs  style.css
skills/: baram-scaffold.md  spec-to-code.md  tiptap-extension-generator.md  ui-component-generator.md
src/: App.css  App.tsx  main.tsx  test-setup.ts  vite-env.d.ts
src-tauri/: CLAUDE.md  Cargo.toml  clippy.toml  deny.toml  ipc-registry.json  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: default.json  plugin-sandbox.json
src-tauri/icons/: icon.icns  recent-vault.rgba
src-tauri/src/: lib.rs  main.rs  menu.rs
src-tauri/src/commands/: config_cmd.rs  context_cmd.rs  embedding_cmd.rs  export_cmd.rs  fs_cmd.rs  git_cmd.rs  index_cmd.rs  keyring_cmd.rs  llm_cmd.rs  mod.rs  plugin_cmd.rs  search_cmd.rs  snapshot_cmd.rs  tag_cmd.rs
src-tauri/src/config/: mod.rs
src-tauri/src/context/: manager.rs  mod.rs  types.rs  vault_config.rs
src-tauri/src/embedding/: chunker.rs  gemini_embed.rs  hybrid_ranker.rs  mod.rs  ollama_embed.rs  openai_embed.rs  vector_store.rs
src-tauri/src/export/: mod.rs  pandoc.rs
src-tauri/src/fs/: mod.rs
src-tauri/src/git/: basic.rs  branch.rs  mod.rs  remote.rs  stash.rs  types.rs
src-tauri/src/index/: extractor.rs  mod.rs  normalizer.rs
src-tauri/src/llm/: cancel.rs  claude.rs  gemini.rs  mod.rs  ollama.rs  openai.rs
src-tauri/src/plugin/: mod.rs
src-tauri/src/search/: mod.rs
src-tauri/src/snapshot/: diff.rs  index.rs  io.rs  merge.rs  mod.rs  policy.rs
src-tauri/src/tag/: mod.rs
tokens/: tokens-studio.json
(+1134 files in other folders)
