[package]
name = "baram"
version = "0.2.0"
description = "Lightweight WYSIWYG Markdown Editor"
authors = ["Baram Team"]
license = "AGPL-3.0"
edition = "2021"

[lib]
name = "baram_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
reqwest = { version = "0.13", features = ["stream", "json"] }
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
headless_chrome = "1"
tempfile = "3"
notify = "8"
regex = "1"
keyring = { version = "3", features = ["apple-native"] }
git2 = "0.20"
zip = "8"
similar = "3"
sha2 = "0.10"
shlex = "2.0"
log = "0.4"
diffy = "0.5.0"
tauri-plugin-clipboard-manager = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
devtools = ["tauri/devtools"]

[profile.release]
opt-level = "s"
lto = true
strip = "symbols"
codegen-units = 1
panic = "abort"
